--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
         </div>
 
     </main>
+    <footer>Atividade 04 - bootcamp web developer full stack - Paulo Ricardo</footer>
+
+    <div class="container-apresentacao">
+        <div class="apresentacao">
+            <h2>Seja bem vindo ao Parrot Card Game 🎲🤪</h2>
+            <ul>
+                <li>Pronto para levar esses papagaios dançantes a loucura? 🤣
+
+                </li>
+                <li> - Instruções: Para iniciarmos o game é necessário que informe seu nome e o número de cartas que
+                    deseja jogar.
+                </li>
+                <li> - Regras: O número de cartas informado deve ser par e ser escolhido de 4 a 14 cartas.
+                </li>
+            </ul>
+            <form>
+                <input type="text" class="inputName" placeholder="Informe seu nome">
+                <input type="text" class="inputCardsGame" placeholder="Deseja jogar com quantas cartas?">
+                <input type="submit" class="button" value="Enviar" id="send">
+
+                <!-- <button class="button">Começar o jogo!</button> -->
+            </form>
+        </div>
+    </div>
 
     <script src="/script.js"></script>
 </body>
