--- a/index.html
+++ b/index.html
@@ -20,51 +20,93 @@
 
 <body>
     <header class="titulo">PARROT CARD GAME</header>
-    <main>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
-        <div class="card">
-            <img src="/assets/front.png" alt="">
-        </div>
+    <ul class="cards-game">
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/bobrossparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/bobrossparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/explodyparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/explodyparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/fiestaparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/fiestaparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/metalparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/metalparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/revertitparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/revertitparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/tripletsparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/tripletsparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/unicornparrot.gif" alt="">
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <img src="/assets/front.png" alt="">
+                <img src="/assets/unicornparrot.gif" alt="">
+            </div>
+        </li>
 
-    </main>
+    </ul>
     <footer>Atividade 04 - bootcamp web developer full stack - Paulo Ricardo</footer>
 
     <div class="container-apresentacao">
