--- a/index.html
+++ b/index.html
@@ -21,90 +21,90 @@
 <body>
     <header class="titulo">PARROT CARD GAME</header>
     <ul class="cards-game">
-        <li>
+        <!--<li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/bobrossparrot.gif" alt="">
+                <img class="hidden" src="/assets/bobrossparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/bobrossparrot.gif" alt="">
+                <img class="hidden" src="/assets/bobrossparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/explodyparrot.gif" alt="">
+                <img class="hidden" src="/assets/explodyparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/explodyparrot.gif" alt="">
+                <img class="hidden" src="/assets/explodyparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/fiestaparrot.gif" alt="">
+                <img class="hidden" src="/assets/fiestaparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/fiestaparrot.gif" alt="">
+                <img class="hidden" src="/assets/fiestaparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/metalparrot.gif" alt="">
+                <img class="hidden" src="/assets/metalparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/metalparrot.gif" alt="">
+                <img class="hidden" src="/assets/metalparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/revertitparrot.gif" alt="">
+                <img class="hidden" src="/assets/revertitparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/revertitparrot.gif" alt="">
+                <img class="hidden" src="/assets/revertitparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/tripletsparrot.gif" alt="">
+                <img class="hidden" src="/assets/tripletsparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/tripletsparrot.gif" alt="">
+                <img class="hidden" src="/assets/tripletsparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/unicornparrot.gif" alt="">
+                <img class="hidden" src="/assets/unicornparrot.gif" alt="">
             </div>
         </li>
         <li>
             <div class="card">
                 <img src="/assets/front.png" alt="">
-                <img src="/assets/unicornparrot.gif" alt="">
+                <img class="hidden" src="/assets/unicornparrot.gif" alt="">
             </div>
-        </li>
+        </li>-->
 
     </ul>
     <footer>Atividade 04 - bootcamp web developer full stack - Paulo Ricardo</footer>
