Adicionado os gifs dentro dos cards e ajustado o tamanho das faces e do main para melhor posicionamento

--- a/index.html
+++ b/index.html
@@ -20,94 +20,9 @@
 
 <body>
     <header class="titulo">PARROT CARD GAME</header>
-    <ul class="cards-game">
-        <!--<li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/bobrossparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/bobrossparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/explodyparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/explodyparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/fiestaparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/fiestaparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/metalparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/metalparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/revertitparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/revertitparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/tripletsparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/tripletsparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/unicornparrot.gif" alt="">
-            </div>
-        </li>
-        <li>
-            <div class="card">
-                <img src="/assets/front.png" alt="">
-                <img class="hidden" src="/assets/unicornparrot.gif" alt="">
-            </div>
-        </li>-->
+    <ul class="cards-game"></ul>
 
-    </ul>
-    <footer>Atividade 04 - bootcamp web developer full stack - Paulo Ricardo</footer>
+    <footer>Projeto 04 - bootcamp web developer full stack - Paulo Ricardo</footer>
 
     <div class="container-apresentacao">
         <div class="apresentacao">
