--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <div class="cronometro">0s</div>
     <header class="titulo">PARROT CARD GAME</header>
     <ul class="cards-game"></ul>
 
