Ajustes nome variável js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="cronometro">0s</div>
+    <!-- <div class="cronometro">0s</div> -->
     <header class="titulo">PARROT CARD GAME</header>
     <ul class="cards-game"></ul>
 
@@ -45,6 +45,12 @@
             </form>
         </div>
     </div>
+    <!-- <div class="container-final-game">
+        <div class="final-game">
+            <h2>Parabéns, você conseguiu agrupar todos os papagainos dançantes 🎲🤪</h2>
+            <button onclick="window.location.reload()">Clique aqui para reiniciar a partida</button>
+        </div>
+    </div> -->
 
     <script src="/script.js"></script>
 </body>
